k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: demo
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30300
